--- a/leetblast-backend/package.json
+++ b/leetblast-backend/package.json
@@ -11,6 +11,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.7.0"
   }
 }
